--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,6 +19,11 @@ jobs:
       - name: Generate your content
         run: echo "Optional placeholder. Put your project's static website generator command here."
 
+      - name: Install dependencies
+        run: npm ci
+      - name: nmp build
+        run: npm run build
+
       - name: Publish current workdir (which contains generated content) to GitHub Pages
         uses: rayluo/github-pages-overwriter@v1.3
 
