--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,8 +20,11 @@ jobs:
         run: echo "Optional placeholder. Put your project's static website generator command here."
 
       - name: Install dependencies
+        working-directory: documentacio
         run: npm ci
+        
       - name: nmp build
+        working-directory: documentacio
         run: npm run build
 
       - name: Publish current workdir (which contains generated content) to GitHub Pages
